css update to fix portfolio display white space created on large displays

--- a/inc/eightdegree-shortcodes/shortcodes.css
+++ b/inc/eightdegree-shortcodes/shortcodes.css
@@ -677,6 +677,7 @@ html[xmlns] .slides {display: block;}
 	line-height: 0;
 }
 .skrollr #portfolioinner li img{
+	min-width: 100%;
 	-webkit-transition: -webkit-transform 0.4s;
 	-moz-transition: transform 0.4s;
 	-ms-transition: -ms-transform 0.4s;
